Fix css bug in custom.css.
White color was applied to all elements with class .nav-link instead of only the ones inside a .navbar-nav element.
This caused the links in the right column to turn white as well, making them invisible on the white background.

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -7,13 +7,8 @@
     background-color: #2F4858 !important;
 }
 
-/* This is kept for reference, in case the logo needs to be adjusted in the css. */
-/*.navbar-brand>.logo {*/
-/*    filter: drop-shadow(1px 1px 0px #ffffff88);*/
-/*}*/
-
-.nav-link {
-    color: #ffffffff!important;
+.navbar-nav > .nav-item > .nav-link {
+    color: #ffffffff;
 }
 
 .navbar-nav > .active > .nav-link {
